syntax = "proto3";

package com.dislinkt.grpc;

option java_multiple_files = true;
option java_package = "com.dislinkt.grpc";

message NotificationProto {
  repeated int64 connectionIdList = 1;
  string text = 2;
}

message NotificationsResponseList {
  repeated NotificationsForUser notifications = 1;
}

message NotificationsForUser {
  int64 notificationsId = 1;
  string text = 2;
  string dateCreated = 3;
  bool seen = 4;
}

message UserIDNotification {
  int64 id = 1;
}

message UpdateNotification {
  int64 notificationId = 1;
  int64 userId = 2;
}

message NotificationResponse {
  string message = 1;
  bool success = 2;
}

service NotificationService {
  rpc getUserNotifications(UserIDNotification) returns (NotificationsResponseList){}
  rpc markAsRead(UpdateNotification) returns (NotificationResponse){}
  rpc removeNotificationForUser(UpdateNotification) returns (NotificationResponse){}
  rpc sendNotification(NotificationProto) returns (NotificationResponse){}
}